clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-while-cond/await-expr-while-cond.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

_Async int f(int start) { 
  int result = start;
  while (result != _Await read(1)) { // expected-error {{_Await expression is not allowed to appear in condition statement of while loop}}
                                    // expected-error@-1 {{_Await expression is not allowed to appear in binary operator expression}}
    result = _Await read(1);
  }
  return result;
}

int main() {
  return 0;
}